# blinky-from-scratch

./: .gitignore  Cargo.toml  README.md  link.x
.cargo/: config
src/: asm.rs  main.rs  stm32f103_consts.rs
