[package]
authors = ["unmanbearpig <unmanbearpig@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "blinky-from-scratch"
version = "0.1.0"

[dependencies]

# this lets you use `cargo fix`!
[[bin]]
name = "blinky-from-scratch"
test = false
bench = false

[profile.release]
opt-level=3
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
